towerbuttons text now more readable "fixed" tab switch bug

--- a/style/game.css
+++ b/style/game.css
@@ -193,9 +193,9 @@ fieldset h2 {
     height: 55px;
     line-height: 55px;
     position: relative;
-    font-size: 11px;
+    font-size: 14px;
     letter-spacing: 0;
-    color: #0e0e0e;
+    color: #AEAEAE; /*#0e0e0e;*/
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.1);
     font-weight: bold;
     background-image: -moz-linear-gradient(#111111, #000000);
